--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <h1>🚀 Coupang Crawler <span>v1.0</span></h1>
-            <p>므인뚜엉도 쉽게 사용하는 프리미엄 리뷰 수집기</p>
+            <p><span class="twinkle">므인뚜엉</span>도 쉽게 사용하는 프리미엄 리뷰 수집기</p>
         </header>
 
         <main>
@@ -43,11 +43,11 @@
                         <input type="number" id="maxPages" value="2">
                     </div>
                     <div class="input-group">
-                        <label>리뷰 기간 (최근 며칠 이내)</label>
+                        <label>리뷰기간 (최근 며칠 이내)</label>
                         <input type="number" id="reviewDays" value="30">
                     </div>
                     <div class="input-group">
-                        <label>리뷰 확인 페이지 (페이지당 10개)</label>
+                        <label>리뷰페이지 (페이지당 10개)</label>
                         <input type="number" id="checkPage" value="20">
                     </div>
                 </div>
